<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rxd.mychat.ui.activity.SetBasicInfoActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/bar_color">

        <ImageView
            android:id="@+id/title_set_info_img_back"
            android:layout_width="40dp"
            android:layout_height="22dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/title_set_info_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/title_set_info_img_back"
            android:layout_centerVertical="true"
            android:textColor="#ffffff"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btn_set_info_ok"
            android:layout_width="60dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:background="@color/greeny"
            android:textColor="#FFFFFF"
            android:text="保存"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_set_info_nickname"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_login"
            android:hint="@string/nickname_hint"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:maxLength="11"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/et_set_info_email"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_login"
            android:hint="@string/email_hint"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/et_set_info_signature"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_login"
            android:hint="@string/signature_hint"
            android:paddingLeft="10dp"
            android:maxLines="1"
            android:maxLength="11"
            android:textColorHint="#DDDDDD"
            android:textSize="16sp"
            android:layout_alignParentStart="true" />

    </LinearLayout>

</LinearLayout>
