<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rxd.mychat.ui.activity.MyInfoActivity"
    android:orientation="vertical"
    android:background="#ebebeb">

    <include layout="@layout/layout_title" />

    <RelativeLayout
        android:id="@+id/rl_my_info_avatar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_avatar"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_my_info_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/default_avatar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_info_nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_nickname"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_info_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_info_account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_info_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_info_gender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_gender"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_info_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_info_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_email"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_info_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_info_org"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_org"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_info_org"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_my_info_sign"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#ffffff"
        android:paddingLeft="12dp"
        android:paddingRight="12dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:paddingLeft="8dp"
            android:text="@string/my_info_signature"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_my_info_express"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="#DBDBDB"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

</LinearLayout>
